--- a/src/css/customization/_variables.scss
+++ b/src/css/customization/_variables.scss
@@ -17,7 +17,7 @@ $breakpoint-large-max: ($breakpoint-xlarge - 1) !default;
 
 $dark: #2b2c34;
 $black: #000000;
-$light: #fffffe;
+$light: #F2F1F0;
 $white: #ffffff;
 $global-color: #333;
 $global-border: #e5e5e5;
